--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/iondrimba/weather-api#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "compression": "^1.7.2",
     "express": "^4.16.3",
     "node-fetch": "^2.1.2"
   },
