--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "body-parser": "^1.18.3",
     "compression": "^1.7.2",
     "express": "^4.16.3",
-    "node-fetch": "^2.1.2"
+    "node-fetch": "^2.1.2",
+    "node-geocoder": "^3.22.0"
   },
   "devDependencies": {
     "cross-env": "^5.2.0"
