--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "body-parser": "^1.18.3",
     "compression": "^1.7.2",
     "express": "^4.16.3",
+    "helmet": "^3.13.0",
     "node-fetch": "^2.1.2",
     "node-geocoder": "^3.22.0"
   },
