ignoring windows linebreak-style

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,20 +1,27 @@
 {
-    "extends": "google",
-    "parserOptions": {
-        "ecmaVersion": 8,
-        "sourceType": "module",
-        "ecmaFeatures": {
-            "module": true
-        }
-    },
-    "env": {
-        "node": true,
-        "es6": true
-    },
-    "rules": {
-        "semi": 2,
-        "new-cap": 1,
-        "arrow-body-style": 0,
-        "max-len": [1, { "code": 120, "tabWidth": 2 }]
+  "extends": "google",
+  "parserOptions": {
+    "ecmaVersion": 8,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "module": true
     }
+  },
+  "env": {
+    "node": true,
+    "es6": true
+  },
+  "rules": {
+    "semi": 2,
+    "new-cap": 1,
+    "linebreak-style": 0,
+    "arrow-body-style": 0,
+    "max-len": [
+      1,
+      {
+        "code": 120,
+        "tabWidth": 2
+      }
+    ]
+  }
 }
