--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./index.js",
-    "lint": "./node_modules/.bin/eslint index.js",
-    "test": "echo \"Error: no test specified\" && exit 0"
+    "lint": "./node_modules/.bin/eslint index.js ./spec/*.js",
+    "test": "jest"
   },
   "engines": {
     "node": "8.9.1"
@@ -32,6 +32,7 @@
   "devDependencies": {
     "cross-env": "^5.2.0",
     "eslint": "^5.5.0",
-    "eslint-config-google": "^0.10.0"
+    "eslint-config-google": "^0.10.0",
+    "jest": "^23.5.0"
   }
 }
