--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./index.js",
+    "start": "node -r ./dotenv.js ./index.js",
     "lint": "./node_modules/.bin/eslint index.js ./spec/*.js ./api/*.js ./routes/*.js ./helpers/*.js",
     "test": "jest --coverage"
   },
@@ -24,6 +24,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "compression": "^1.7.2",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "helmet": "^3.13.0",
     "node-fetch": "^2.1.2",
