--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "jest --coverage"
   },
   "engines": {
-    "node": "8.9.1"
+    "node": ">=10"
   },
   "repository": {
     "type": "git",
