--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node -r ./dotenv.js ./index.js",
-    "lint": "./node_modules/.bin/eslint index.js ./spec/*.js ./api/*.js ./routes/*.js ./helpers/*.js",
+    "lint": "./node_modules/.bin/eslint .",
     "test": "jest --coverage"
   },
   "engines": {
