--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -45,4 +45,4 @@ jobs:
         CI: true
         CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
       with:
-        coverageCommand: npm test
+        coverageCommand: npm run coverage
