--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node -r ./dotenv.js ./index.js",
     "lint": "./node_modules/.bin/eslint .",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "coverage": "npm test"
   },
   "engines": {
     "node": ">=10"
