Sync node version

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "coverage": "npm test"
   },
   "engines": {
-    "node": ">=10"
+    "node": "18.6.0",
+    "npm": "8.13.2"
   },
   "repository": {
     "type": "git",
